Forge 1.19.2
Fixes #6501: By using this overload of the renderTooltip method, we support Forges tooltip hook